# permit-regulations-rag

./: .gitignore  123.json  12345.txt  Dockerfile  LICENSE  README.md  app.py  cofede.py  minilm6.py  pyproject.toml  readme.md  vectorOpenaiADA006.py
Deprecated/: Alaska1.json  Michigan.json  Michigan1.json  order_221.json
assistant/: __init__.py  voice_app.py
config/: __init__.py  constants.py  settings.py
data/: Arizona.json
data/extracted_permits/: 14236_permit_info.json  14237_permit_info.json  14238_permit_info.json  14259_permit_info.json  14260_permit_info.json
data/extracted_texts/: extracted_text_1735587517_91.txt  extracted_text_1735595685_33.txt  extracted_text_1735604368_33.txt  extracted_text_1735651561_10.txt  extracted_text_1735651592_14.txt
db/: __init__.py
docs/: ARCHITECTURE.md  SETUP.md
pipelines/: __init__.py  etl_orders.py  preprocessing.py  query_processor.py  rag_provisions.py
services/: __init__.py  conversation.py  data_filter.py  llm_client.py  location_weather.py  order_cache.py  order_service.py  permit_service.py  proactive_monitor.py  speech_service.py  state_service.py  user_service.py
src/: embeddings_minilm.py  embeddings_openai.py  rag_pipeline.py  scraper.py
tests/: conftest.py  test_data_filter.py  test_data_utils.py  test_query_processor.py  test_utils.py
utils/: __init__.py  data.py  text.py
