[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "heavyhaul-ai"
version = "1.0.0"
description = "AI-powered voice assistant for HeavyHaul trucking logistics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HeavyHaul Team"},
]
keywords = ["ai", "voice-assistant", "trucking", "logistics", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Database
    "pymongo[srv]>=4.6",

    # LLM Providers
    "groq>=0.4",
    "openai>=1.12",

    # LangChain & RAG
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "faiss-cpu>=1.7",
    "chromadb>=0.4",

    # Speech
    "edge-tts>=6.1",
    "SpeechRecognition>=3.10",
    "pygame>=2.5",

    # PDF Processing
    "pdfplumber>=0.10",
    "PyPDF2>=3.0",
    "easyocr>=1.7",

    # Web & APIs
    "requests>=2.31",
    "beautifulsoup4>=4.12",

    # Location
    "geopy>=2.4",
    "geocoder>=1.38",

    # Config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
ocr = [
    "pytesseract>=0.3",
    "google-generativeai>=0.4",
]
demo = [
    "streamlit>=1.30",
]

[project.scripts]
heavyhaul = "assistant.voice_app:main"

[tool.setuptools.packages.find]
include = ["assistant*", "config*", "db*", "pipelines*", "services*", "utils*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
